--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,12 @@ RewriteBase /
 RewriteCond %{HTTP_HOST} ^www.foodfood.ru$ [NC]
 RewriteRule ^(.*)$ http://foodfood.ru/$1 [R=301,L]
 
+RewriteCond %{HTTP_HOST} ^[w\.]*fudfud.ru$ [NC]
+RewriteRule ^(.*)$ http://foodfood.ru/$1 [R=301,L]
+
+RewriteCond %{HTTP_HOST} ^[w\.]*fydfyd.ru$ [NC]
+RewriteRule ^(.*)$ http://foodfood.ru/$1 [R=301,L]
+
 RewriteRule ^public/(.*)$ public/$1 [L]
 RewriteRule ^upload/(.*)$ upload/$1 [L]
 
