--- a/.htaccess
+++ b/.htaccess
@@ -23,7 +23,7 @@ RewriteRule ^upload/(.*)$ upload/$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php
+RewriteRule ^(.*)$ index.php [L]
 
 </IfModule>
 
