--- a/market/.htaccess
+++ b/market/.htaccess
@@ -4,11 +4,11 @@ Options +FollowSymLinks
 
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /market/
+RewriteBase /
 RewriteRule ^public/(.*)$ public/$1 [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php
+RewriteRule ^(.*)$ index.php [L]
 </IfModule>
 
 php_flag display_errors On
